# cae-polars-tools

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
data/: benchmark_results.json  comprehensive_benchmark_results.json  large_dataset_benchmark_results.json  simple_benchmark_results.json  targeted_benchmark_results.json  tasmax_metadata.json  zarr_comparison_results.json
docs/: changelog.md  conf.py  contributing.md  index.md  installation.md  quickstart.md  requirements.txt
docs/_static/: custom.css
docs/api_reference/: index.md
docs/examples/: index.md
docs/user_guide/: basic_concepts.md  data_conversion.md  index.md  performance_tips.md  reading_data.md
examples/: basic_usage.py
src/: __init__.py  cli.py
src/data_access/: REFACTORING_SUMMARY.md  __init__.py  coordinate_processor.py  polars_IOplugin_zarr.py  polars_converter.py  zarr_reader.py  zarr_scanner.py  zarr_storage.py
tests/: compare_zarr_xarray.py  compare_zarr_xarray_metadata.py  comprehensive_speed_test.py  conftest.py  enhanced_zarr_reader.py  large_dataset_performance_test.py  performance_comparison_polars_vs_xarray.py  simple_performance_test.py  targeted_performance_test.py  test_clean_plugin.py  test_cli.py  test_coordinate_processor.py  test_polars.ipynb  test_polars_converter.py  test_refactored_zarr.py  test_tasmax_refactored.py  test_zarr_reader.py  test_zarr_scanner.py  test_zarr_storage.py  xarray_polars_comparison.py
